<resources>
    <string name="app_name">Seoullo_new</string>
    <string name="seoullo">SEOULLO</string>
    <string name="seoullo_small_letter" translatable="false">Seoullo</string>"
    <string name="empty" translatable="false"></string>
    <string name="line" translatable="false">-</string>
    <string name="btn_close">Close</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Press \'back\' again to exit.</string>
    <string name="yes">Y</string>
    <string name="no">N</string>
    <string name="en" translatable="false">en</string>
    <string name="ko" translatable="false">ko</string>
    <string name="percent_d" translatable="false">%d%%</string>
    <string name="retry">Retry</string>
    <string name="error_failure_init_list">Failed to create list.: %s</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="permission_denied">If you reject permission, you cannot use this service. Please turn on permissions in settings.</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="start">START</string>
    <string name="intro1_title">Welcome to Seoul!!</string>
    <string name="intro1_contents">Thank you for using this app! It is a Seoul tour guide app. I\'m sure it will be a great help if you use this app while traveling to Seoul.</string>
    <string name="intro2_title">Function!!</string>
    <string name="intro2_contents">"Seoullo" has various functions.\nThere are travel destinations and restaurants that will remain memorable if you go, and maps and translations to go there.</string>
    <string name="intro3_title">Let\'s going to Seoullo!</string>
    <string name="intro3_contents">Now start a happy tour of Seoul with "Seoullo"!</string>

    <string name="balloon_info_text">Also try the “NearBySearch” feature!</string>

    <!--  main  -->
    <string name="tab_home">Home</string>
    <string name="tab_travel">Travel</string>
    <string name="tab_setting">Setting</string>

    <!-- home -->
    <string name="feels_like">Feels Like: %s°</string>
    <string name="humidity">Humidity(%)</string>
    <string name="precipitation">Precipitation(mm)</string>
    <string name="fine_dust">Fine Dust</string>
    <string name="ultra_fine_dust">Ultra Fine Dust</string>
    <string name="fine_dust_good">Good(%d㎍/㎥)</string>
    <string name="fine_dust_normal">Normal(%d㎍/㎥)</string>
    <string name="fine_dust_bad">Bad(%d㎍/㎥)</string>
    <string name="fine_dust_very_bad">Very Bad(%d㎍/㎥)</string>
    <string name="wind_speed">Wind Speed(m/s)</string>
    <string name="uv">UV</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="am" translatable="false">%s AM</string>
    <string name="pm" translatable="false">%s PM</string>
    <string name="current_seoul">in Seoul: %s</string>
    <string name="today_watched_list">🗺️ Today Watched List</string>
    <string name="today_watched_list_title">Today Watched List</string>

    <!--  travel  -->
    <string name="travel_title_restaurant">🍚 Restaurant</string>
    <string name="korean_restaurant">Korean Restaurant</string>
    <string name="japanese_restaurant">Japanese Restaurant</string>
    <string name="chinese_restaurant">Chinese Restaurant</string>
    <string name="western_restaurant">Western Restaurant</string>
    <string name="bar_cafe">Bar, Cafe</string>
    <string name="travel_title_accommodation">🏨 Accommodation</string>
    <string name="hotel">Hotel</string>
    <string name="motel">Motel</string>
    <string name="guest_house">Guest House</string>
    <string name="condominium">Condominium</string>
    <string name="travel_title_attraction">🎎 Attraction</string>
    <string name="nature">Nature</string>
    <string name="historical">Historical</string>
    <string name="culture">Culture</string>
    <string name="leisure_sports">Leisure Sports</string>
    <string name="travel_title_shopping">🛍️ Shopping</string>
    <string name="department_store">Department Store</string>
    <string name="market">Market</string>

    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="image_loading_error">Image does not exist.</string>
    <string name="tour_list">Tour List</string>
    <string name="tour_list_description">Showing the tourist attractions of Seoul as a list.</string>
    <string name="nearby_list">Nearby List</string>
    <string name="nearby_list_description">A list of tourist attractions within a radius of 1 km is shown.(up to 20)</string>
    <string name="seoul">Seoul</string>
    <string name="temp_symbol" translatable="false">%s°</string>
    <string name="go_to_top">Go to top</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="sort_by_review">Sort by review</string>

    <string name="review_with_icon">✏ Review</string>
    <string name="google_review_limit_notice">Up to 5 Google reviews are provided.</string>
    <string name="see_more">See more</string>

    <string name="direction_title">Direction</string>
    <string name="select_places_title">Select Places</string>
    <string name="starting">Starting</string>
    <string name="starting_supporting">Input Starting Point.</string>
    <string name="destination">Destination</string>
    <string name="destination_supporting">Input Destination.</string>
    <string name="current_location">Current Location</string>
    <string name="current_location_error">Please select a starting or destination area.</string>
    <string name="enter">enter</string>
    <string name="enter_error">Please input both Starting and Destination.</string>
    <string name="duration">Duration</string>
    <string name="start2">Start</string>
    <string name="arrival">Arrival</string>

    <!--  type  -->
    <string name="travel_mode_walking" translatable="false">WALKING</string>
    <string name="travel_mode_transit" translatable="false">TRANSIT</string>
    <string name="transit_type_bus" translatable="false">BUS</string>
    <string name="transit_type_subway" translatable="false">SUBWAY</string>

    <!--  community  -->
    <string name="add_post_title">Add Post</string>
    <string name="add_post_hint">Please enter a title.</string>
    <string name="add_post_content_hint">Please enter a content.</string>
    <string name="add_post_summit">Summit</string>
    <string name="post_modify">Modify</string>
    <string name="post_delete">Delete</string>
    <string name="delete_post_dialog_contents">Are you sure you want to delete this post?\nAfter deletion, restoration is not possible.</string>
    <string name="delete_comment_dialog_contents">Are you sure you want to delete this comment?\nAfter deletion, restoration is not possible.</string>
    <string name="delete_reply_dialog_contents">Are you sure you want to delete this reply?\nAfter deletion, restoration is not possible.</string>
    <string name="reply">Reply</string>
    <string name="reply_notice">Reply to %s</string>
    <string name="has_been_deleted_comment">This comment has been deleted.</string>
    <string name="edit_post_title">Edit Post</string>
    <string name="image_download_complete">Image Download Complete.</string>

    <!--  setting  -->
    <string name="theme_title">Theme Setting</string>
    <string name="theme_settings_title">Theme</string>
    <string name="theme_settings_description">You can set Dynamic Theme and Dark Mode.</string>
    <string name="theme_settings_icon_description">Theme</string>
    <string name="dynamic_theme">Dynamic Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="system_default">System Default</string>

    <string name="language_title">Language</string>
    <string name="language_icon_description">Language</string>
    <string name="language_ENGLISH">English</string>
    <string name="language_KOREA">Korea</string>

    <string name="about_title">About</string>
    <string name="version_title">Version</string>
    <string name="license_title">License</string>
    <string name="license_description">Open Source License</string>
    <string name="github_title" translatable="false">Github</string>
    <string name="bug_report_title">Bug Report</string>
    <string name="bug_report_description">Something isn\'t working correctly?</string>
    <string name="play_store_title" translatable="false">Play Store</string>
    <string name="logout_title">Logout</string>
    <string name="logout_dialog_contents">Do you want to logout?</string>
    <string name="show_list_title">Show List</string>
    <string name="show_list_description">Show Today Watched List in Home.</string>
    <string name="github_link" translatable="false">https://github.com/tkddn9316/Seoullo_new</string>
    <string name="bug_report_link" translatable="false">https://github.com/tkddn9316/Seoullo_new/issues/new/choose</string>
    <string name="play_store_link" translatable="false">https://play.google.com/store/apps/details?id=com.app.seoullo_new</string>

    <string name="account_title">Account</string>

    <!-- error screen -->
    <string name="screen_loading_failed">Screen loading failed.</string>
    <string name="screen_loading_failed_reason">Reason: %s</string>
    <string name="error_reason_no_result">No Result.</string>
</resources>